--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <body>
     <header class="page-header">
       <div class="container">
-      Контакты в шапке
+      theivangao@gmail.com
       </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
-      <h1 class="heading">Неопознанный Енот</h1>
+      <h1 class="heading">Charlies Kvit</h1>
       <p>Junior верстальщик</p>
       </div>
     </section>
@@ -25,9 +25,9 @@
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
-      <p>Текст с парой слов о себе.</p>
+      <p>Мне 15 лет. Учу HTML, CSS, PHP И Python.</p>
       <h3>Чем могу быть полезен</h3>
-      <p>Текст о том, чем могу быть полезен.</p>
+      <p>Нужна помощь с сайтом? Попытаюсь помочь. Нужна программа? Попробуем написать.</p>
       </div>
     </section>
 
@@ -45,7 +45,7 @@
 
     <footer class="page-footer">
       <div class="container">
-      Контакты в подвале
+      theivangao@gmail.com
       </div>
     </footer>
   </body>
