--- a/index.html
+++ b/index.html
@@ -24,14 +24,23 @@
 
     <section class="intro">
       <div class="container">
-      <h2 class="subheading">Давайте познакомимся</h2>
-      <figure class="user-image">
-        <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
-      </figure>
-      <h3>Пара слов о себе</h3>
-      <p>Мне 15 лет. Учу HTML, CSS, PHP И Python.</p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Нужна помощь с сайтом? Попытаюсь помочь. Нужна программа? Попробуем написать.</p>
+        <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+        </figure>
+        <h3>Пара слов о себе</h3>
+        <p>Мне 15 лет. Учу HTML, CSS, PHP И Python.</p>
+        <h3>Чем могу быть полезен</h3>
+        <p>Нужна помощь с сайтом? Попытаюсь помочь. Нужна программа? Попробуем написать.</p>
+        <div class="skills">
+          <h3>Мои навыки</h3>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+            <dd class="level"><div style="width: 60%">60%</div></dd>
+            <dt class="skill-css">CSS</dt>
+            <dd class="level"><div style="width: 40%">40%</div></dd>
+          </dl>
+        </div>
       </div>
     </section>
 
@@ -50,7 +59,7 @@
       </div>
     </section>
 
-    <footer class="page-footer">
+    <footer class="page-footer">>
       <div class="container">
         <a class="footer-email" href="mailto:theivangao@gmail.com">theivangao@gmail.com</a>
         <a class="footer-phone" href="tel:+79852120170">+7-(985)-212-01-70</a>
