--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </section>
 
-    <footer class="page-footer">>
+    <footer class="page-footer">
       <div class="container">
         <a class="footer-email" href="mailto:theivangao@gmail.com">theivangao@gmail.com</a>
         <a class="footer-phone" href="tel:+79852120170">+7-(985)-212-01-70</a>
