upload big update

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
         </figure>
         <h3>Пара слов о себе</h3>
-        <p>Мне 15 лет. Учу HTML, CSS, PHP И Python.</p>
+        <p class="center">Мне 15 лет. Учу HTML, CSS, PHP И Python.</p>
         <h3>Чем могу быть полезен</h3>
-        <p>Нужна помощь с сайтом? Попытаюсь помочь. Нужна программа? Попробуем написать.</p>
-        <div class="skills">
+        <p class="center">Нужна помощь с сайтом? Попытаюсь помочь. Нужна программа? Попробуем написать.</p>
+        <div class="skills center">
           <h3>Мои навыки</h3>
           <dl class="skills-list">
             <dt class="skill-html">HTML</dt>
@@ -45,7 +45,7 @@
     </section>
 
     <section class="portfolio">
-      <div class="container">
+      <div class="container center">
       <h2 class="subheading">Мои работы</h2>
       <figure class="project-image">
         <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
