--- a/source/project-gloevk/index.html
+++ b/source/project-gloevk/index.html
@@ -8,9 +8,12 @@
   <body>
     <header class="site-header">
       <div class="container">
-        <h1>Gloevk</h1>
+        <!--<h1>Gloevk</h1>-->
+        <img class="img" src="img/gloevk-logo-white.svg">
         <p>Разнообразные товары для дома с доставкой по всей планете</p>
+        <a href="/home/charliesk/portfolio-step-1/index.html"> <!--In github href="/index.html"-->
         <img src="img/gloevk-examples.png" width="510" height="80" alt="Примеры интерьеров">
+        </a>
       </div>
     </header>
 
