--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p
-        <a class="button" href="index.html">Скоро будет</a>
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
       </div>
     </section>
 
