--- a/source/project-gloevk/index.html
+++ b/source/project-gloevk/index.html
@@ -11,7 +11,7 @@
         <!--<h1>Gloevk</h1>-->
         <img class="img" src="img/gloevk-logo-white.svg">
         <p>Разнообразные товары для дома с доставкой по всей планете</p>
-        <a href="Portfolio/index.html">
+        <a href="/Portfolio/index.html">
         <img src="img/gloevk-examples.png" width="510" height="80" alt="Примеры интерьеров">
         </a>
       </div>
