--- a/source/project/index.html
+++ b/source/project/index.html
@@ -10,7 +10,9 @@
       <h1>Сайт начинающего верстальщика</h1>
     </header>
     <main>
+      <a href="/Portfolio/index.html">
       <img class="avatar" src="img/raccoon.svg" width="80" height="80" alt="Аватарка">
+      </a>
       <nav class="blog-navigation">
         <h2>Записи в блоге</h2>
         <ul>
